--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,78 @@
-# Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
-bin
+# Compiled source
+*.com
+*.class
+*.o
+*.obj
+*.so
+*.pdb
+*.lib
+*.exp
+*.o.*
+*.a
+*.so.dbg
+*.bin
+*.ilk
+*.aps
+*.manifest
+*.vhost.exe
+
+# Packages
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases
+*.log
+*.sql
+*.sqlite
+
+# OS generated files
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Build generated files
+autom4te.cache
+
+# Editors / debuggers / other output files
+*~
+*.bak
+*.orig
+*.patch
+callgrind.out.*
+
+# Visual studio
+*.webinfo
+*.ncb
+*.suo
+*.sdf
+*.opensdf
+*.sln.cache
+*.vsp
+ipch
+*.user
+*.cache
+*.tlog
+*.resources
+*.FileListAbsolute.txt
+TempPE
 obj
 
-# mstest test results
-TestResults
+# Subversion data folders
+.svn/
+
+#resharper
+*_resharper*
+
+# CMake temporary files
+CMakeFiles
+CMakeCache.txt
+cmake_install.cmake
