--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 *.ilk
 *.aps
 *.manifest
-*.vhost.exe
+*.exe
+*.exe.config
 
 # Packages
 # it's better to unpack these files and commit the raw source
